Sequencer: Preview range waits for the virtual playhead to reach it's start before playing #80282

Closed
opened 2020-08-31 16:02:27 +02:00 by Félix · 6 comments

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-12.9.22

Blender Version
Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: c2b144df39
Worked: (newest version of Blender that worked as expected)

Short description of error
When a preview range is set away from the playhead and "play" is started right after, the playback waits until the source playhead reaches the preview range start before actually starting to play.

Exact steps for others to reproduce the error

  • Start from Video Editing app template
  • Set a preview range with a frame start ~50 frames ahead from the playhead.
  • Press play, the playback waits virtually the playhead for reaching the preview range start (around 2sec).
**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-12.9.22 **Blender Version** Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: `c2b144df39` Worked: (newest version of Blender that worked as expected) **Short description of error** When a preview range is set away from the playhead and "play" is started right after, the playback waits until the source playhead reaches the preview range start before actually starting to play. **Exact steps for others to reproduce the error** - Start from Video Editing app template - Set a preview range with a frame start ~50 frames ahead from the playhead. - Press play, the playback waits virtually the playhead for reaching the preview range start (around 2sec).
Author

Added subscriber: @Miadim

Added subscriber: @Miadim

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Seems to be working evrywhere else, only sequencer has this problem.
Will have a look

Seems to be working evrywhere else, only sequencer has this problem. Will have a look

This issue was referenced by f375ec4986

This issue was referenced by f375ec4986daed7d54ca2bb418b764536f201b94

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-10-05 03:19:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80282
No description provided.