source/blender/editors/screen/screen_edit.c
@@ -1521,6 +1521,9 @@ void ED_screen_animation_timer(bContext *C, int redraws, int sync, int enable)
     screen->animtimer->customdata = sad;
   }
 
+  /* Seek audio to ensure playback in preview range with AV sync. */
+  DEG_id_tag_update(&scene->id, ID_RECALC_AUDIO_SEEK);
+
   /* notifier catched by top header, for button */
   WM_event_add_notifier(C, NC_SCREEN | ND_ANIMPLAY, NULL);
 }
